# ruc-desktop

./: .gitignore  docker-compose.engine-relay.yml
backend/: AGENT_CLIENT.md  pom.xml  run-agent.cmd
backend/src/main/java/ru/ruc/desktop/: RucDesktopApplication.java
backend/src/main/java/ru/ruc/desktop/bootstrap/: DemoDataLoader.java
backend/src/main/java/ru/ruc/desktop/config/: AppConfig.java  DemoProperties.java  RemoteEngineProperties.java  WebConfig.java  WebSocketConfig.java
backend/src/main/java/ru/ruc/desktop/domain/: AgentStatus.java  ConnectionTicket.java  ConnectionTicketStatus.java  Machine.java  ManagedAgent.java  RemoteAccessSession.java  SessionAudit.java  SessionStatus.java
backend/src/main/java/ru/ruc/desktop/engine/: AgentCaptureDisplay.java  AgentConfig.java  AgentControlPlaneClient.java  AgentMediaSession.java  AgentRemoteInput.java  AgentRuntime.java  AgentScreenCapture.java  AgentSignalingClient.java  AgentSignalingListener.java  AgentSignalingSession.java  AgentUrls.java  AgentWebRtcBridge.java  (+1 more)
backend/src/main/resources/: application-prod.yml  application.yml
deploy/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  run-agent-remote.cmd
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  mediaStream.ts  remoteInput.ts  signaling.ts
frontend/src/hooks/: useLocalPeerDisplay.ts
native-helper/: CMakeLists.txt  README.md
native-helper/src/: main.cpp  main_stub.cpp
scripts/: start-engine-relay.ps1  start-engine-relay.sh
(+31 files in other folders)
